# Quake3-BSP

./: .gitignore  CMakeLists.txt  README.md  cclass.go  go.mod  update.go
Quake Id Tech 2/: CMakeLists.txt  Quake Id Tech 2.cpp  Quake Id Tech 2.h
src/: g_engine.cpp  g_engine.hpp  g_main.cpp  g_main.hpp
src/core/: engine.cpp  engine.h  engine.hpp  window.cpp  window.h  window.hpp
src/core/logging/: logger.hpp
src/core/text/: rasterText.hpp
src/core/timing/: highResTimer.cpp  highResTimer.hpp
src/input/: inputManager.cpp  inputManager.h  inputManager.hpp  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  mouse.hpp
src/physics/: collisionHandler.cpp  collisionHandler.hpp
src/resource/loader/: QLoader.cpp  QLoader.h  QLoader.hpp
src/resource/material/: texture.cpp  texture.hpp
src/scene/element/: element.cpp  element.hpp
src/scene/element/entity/: entity.hpp
src/scene/element/terrain/: terrain.cpp  terrain.hpp
src/scene/structure/: node.cpp  node.hpp
src/scene/world/: level.cpp  level.hpp  world.cpp  world.hpp
src/utils/: arrayUtils.hpp
src/view/: camera.cpp  camera.hpp  frustum.cpp  frustum.hpp
