# CMakeList.txt : CMake project for Quake Id Tech 2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "Quake Id Tech 2.cpp" "Quake Id Tech 2.h")

# TODO: Add tests and install targets if needed.
